[package]
name = "s4killer"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30.5"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_InstallableFileSystems"
]

